fix: adjust overflow to see if that fixes hyphenation on ios

--- a/static/main.css
+++ b/static/main.css
@@ -142,7 +142,7 @@ iframe {
 
 p {
   margin: 0px;
-  overflow-inline: clip;
+  overflow-wrap: break-word;
 }
 
 p + p {
